--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<h1>@name</h1>
+					<h1>Andres Valencia (safajirafa)</h1>
 					<p>By HTML5 UP</p>
 				</header>
 				<footer>
