--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>safajirafa</title>
+		<title>Overflow by HTML5 UP</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -27,24 +27,27 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<h1>Andres Valencia (safajirafa)</h1>
-					<p>By HTML5 UP</p>
+					<h1>safajirafa</h1>
+					<p>Andres Valencia</p>
 				</header>
 				<footer>
-					<a href="#banner" class="button style2 scrolly scrolly-centered">Proceed as anticipated</a>
+					<a href="#banner" class="button style2 scrolly scrolly-centered">Feel like clicking something? (get to know me)...</a>
 				</footer>
 			</section>
 
 		<!-- Banner -->
 			<section id="banner">
 				<header>
-					<h2>This is Overflow</h2>
+					<h2>Hi I'm Andres</h2>
 				</header>
-				<p>A brand new site template designed by <a href="http://n33.co">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a>.<br />
-				It’s fully responsive, built on <a href="http://skeljs.org">skelJS</a>, and of course entirely free<br />
-				under the <a href="http://html5up.net/license/">Creative Commons license</a>.</p>
+				<p>
+					I'm a software engineer based in Montreal. I enjoy developing for/on the cloud, love to keep things simple.
+				</p>
+				<p>
+					When I'm not doing software stuff, I can be found biking with my lovely wife and son, maybe eating out or reading.
+				</p>
 				<footer>
-					<a href="#first" class="button style2 scrolly">Act on this message</a>
+					<a href="#first" class="button style2 scrolly">Still want to know more? (wow thanks)</a>
 				</footer>
 			</section>
 
@@ -53,10 +56,16 @@
 				<a href="http://ineedchemicalx.deviantart.com/art/Time-goes-by-too-fast-335982438" class="image full"><img src="images/pic01.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>Lorem ipsum<br />
-						dolor sit amet</h2>
+						<h2>Coding<br>most of the time:</h2>
 					</header>
-					<p>Tortor faucibus ullamcorper nec tempus purus sed penatibus. Lacinia pellentesque eleifend vitae est elit tristique velit tempus etiam.</p>
+					<ul>
+						<li>Javascript</li>
+						<li>CSS</li>
+						<li>HTML5</li>
+						<li>C#</li>
+						<li>SQL</li>
+						<li>Using MV* (like Angular)</li>						
+					</ul>
 				</div>
 			</article>
 
@@ -65,19 +74,31 @@
 				<a href="http://ineedchemicalx.deviantart.com/art/Kingdom-of-the-Wind-348268044" class="image full"><img src="images/pic02.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>Mollis posuere<br />
-						lectus lacus</h2>
+						<h2>In my spare time:<br />
+						I code</h2>
 					</header>
-					<p>Rhoncus mattis egestas sed fusce sodales rutrum et etiam ullamcorper. Etiam egestas scelerisque ac duis magna lorem ipsum dolor.</p>
+					<ul>
+						<li>NodeJS</li>
+						<li>NoSQL with MongoDB</li>
+						<li>Go</li>
+					</ul>
+					<hr>
+					<p>Like doing UX research and training</p>
 				</div>
 			</article>
 
 		<!-- Portfolio -->
 			<article class="container box style2">
 				<header>
-					<h2>Magnis parturient</h2>
-					<p>Justo phasellus et aenean dignissim<br />
-					placerat cubilia purus lectus.</p>
+					<h2>I like and embrace diversity</h2>
+					<ul>
+						<li>I have an Android phone</li>
+						<li>I work on windows (I can explain :S)</li>
+						<li>I code on a Macbook Pro</li>
+						<li>I have a Chromebook</li>
+						<li>I like Sublime</li>
+						<li>My stuff is in the cloud</li>
+					</ul>
 				</header>
 				<div class="inner gallery">
 					<div class="row flush">
@@ -96,7 +117,7 @@
 			</article>
 
 		<!-- Contact -->
-			<article class="container box style3">
+			<!--<article class="container box style3">
 				<header>
 					<h2>Nisl sed ultricies</h2>
 					<p>Diam dignissim lectus eu ornare volutpat orci.</p>
@@ -119,7 +140,7 @@
 						</div>
 					</div>
 				</form>
-			</article>
+			</article>-->
 
 		<!-- Generic -->
 		<!--
@@ -280,17 +301,16 @@
 
 		<section id="footer">
 			<ul class="icons">
-				<li><a href="#" class="fa fa-twitter solo"><span>Twitter</span></a></li>
-				<li><a href="#" class="fa fa-facebook solo"><span>Facebook</span></a></li>
-				<li><a href="#" class="fa fa-google-plus solo"><span>Google+</span></a></li>
-				<li><a href="#" class="fa fa-pinterest solo"><span>Pinterest</span></a></li>
-				<li><a href="#" class="fa fa-dribbble solo"><span>Dribbble</span></a></li>
-				<li><a href="#" class="fa fa-linkedin solo"><span>LinkedIn</span></a></li>
+				<li><a href="https://twitter.com/safajirafa" target="_blank" class="fa fa-twitter solo"><span>Twitter</span></a></li>
+				<li><a href="https://www.facebook.com/andres.valencia.ospina" target="_blank" class="fa fa-facebook solo"><span>Facebook</span></a></li>
+				<li><a href="https://plus.google.com/+AndresValenciaOspina" target="_blank" class="fa fa-google-plus solo"><span>Google+</span></a></li>
+				<li><a href="http://www.pinterest.com/safajirafa/" target="_blank" class="fa fa-pinterest solo"><span>Pinterest</span></a></li>
+				<li><a href="http://dribbble.com/safajirafa" target="_blank" class="fa fa-dribbble solo"><span>Dribbble</span></a></li>
+				<li><a href="http://ca.linkedin.com/in/andresvalencia/" target="_blank" class="fa fa-linkedin solo"><span>LinkedIn</span></a></li>
 			</ul>
 			<div class="copyright">
 				<ul class="menu">
-					<li>&copy; Untitled. All rights reserved.</li>
-					<li>Design: <a href="http://html5up.net/">HTML5 UP</a></li>
+					<li><small>Design: <a href="http://html5up.net/">HTML5 UP</a></small></li>
 				</ul>
 			</div>
 		</section>
