--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<p>Andres Valencia</p>
 				</header>
 				<footer>
-					<a href="#banner" class="button style2 scrolly scrolly-centered">Feel like clicking something? (get to know me)...</a>
+					<a href="#banner" class="button style2 scrolly scrolly-centered">Get to know me</a>
 				</footer>
 			</section>
 
