--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						<li>Go</li>
 					</ul>
 					<hr>
-					<p>Like doing UX research and training</p>
+					<p>I also like doing UX research and training</p>
 				</div>
 			</article>
 
