--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 		<!-- Feature 1 -->
 			<article id="first" class="container box style1 right">
-				<a href="http://ineedchemicalx.deviantart.com/art/Time-goes-by-too-fast-335982438" class="image full"><img src="images/pic01.jpg" alt="" /></a>
+				<a href="" class="image full"><img src="images/" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>Coding<br>most of the time:</h2>
@@ -64,26 +64,28 @@
 						<li>HTML5</li>
 						<li>C#</li>
 						<li>SQL</li>
-						<li>Using MV* (like Angular)</li>						
+						<li>Using MV* (like Angular)</li>
+						<li>TDD with jasmine</li>
 					</ul>
 				</div>
 			</article>
 
 		<!-- Feature 2 -->
 			<article class="container box style1 left">
-				<a href="http://ineedchemicalx.deviantart.com/art/Kingdom-of-the-Wind-348268044" class="image full"><img src="images/pic02.jpg" alt="" /></a>
+				<a href="" class="image full"><img src="images/pic02.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>In my spare time:<br />
 						I code</h2>
 					</header>
 					<ul>
+						<li>PolymerJS</li>
 						<li>NodeJS</li>
 						<li>NoSQL with MongoDB</li>
 						<li>Go</li>
 					</ul>
 					<hr>
-					<p>I also like doing UX research and training</p>
+					<p>Like doing UX research and training</p>
 				</div>
 			</article>
 
@@ -100,6 +102,8 @@
 						<li>My stuff is in the cloud</li>
 					</ul>
 				</header>
+				
+				<!-- Gallery
 				<div class="inner gallery">
 					<div class="row flush">
 						<div class="3u"><a href="images/fulls/01.jpg" class="image full"><img src="images/thumbs/01.jpg" alt="" title="Ad infinitum" /></a></div>
@@ -114,6 +118,8 @@
 						<div class="3u"><a href="images/fulls/08.jpg" class="image full"><img src="images/thumbs/08.jpg" alt="" title="People come and go and walk away" /></a></div>
 					</div>
 				</div>
+				-->
+				
 			</article>
 
 		<!-- Contact -->
