--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 		<!-- Feature 1 -->
 			<article id="first" class="container box style1 right">
-				<a href="" class="image full"><img src="images/" alt="" /></a>
+				<a href="" class="image full"><img src="images/pic01.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>Coding<br>most of the time:</h2>
